<resources>
    <string name="app_name">Sondage habitudes de consommation</string>

    <string name="api_url">http://192.168.1.12:9000/api/%s</string>
    <string name="api_categories_all_path">categories/categorie/all</string>
    <string name="api_categories_byParentId_path">categories/by_parent/%d</string>
    <string name="api_aliments_byCategoryId_path">aliment/by_soussouscategorie/%d?valeurs_nutritives=false</string>
    <string name="api_survey_send_path">sondage/create</string>

    <string name="catergorie_collapse_title">Categorie : %s</string>
    <string name="sscatergorie_collapse_title">Sous Categorie : %s</string>
    <string name="sssscatergorie_collapse_title">Sous Sous Categorie : %s</string>

    <string name="no_aliments_message">Aucun aliment pour l\'instant</string>
    <string name="aliments_title">Aliments</string>
    <string name="send_number_alim">%d/10</string>

    <string name="send_title">Informations personnelles</string>
    <string name="send_information_lastname">Nom</string>
    <string name="send_information_name">Prénom</string>
    <string name="send_information_email">Email</string>
    <string name="send_information_zipcode">Code postal</string>
    <string name="send_information_city">Ville</string>
    <string name="send_submit_text">Submit</string>
    <string name="sucess_message">Reponses enregistrées\n\n Merci pour votre participation</string>

    <string name="error_info_notallfields">Veuillez renseigner tous les champs</string>
    <string name="error_info_mailwrongformat">Veuillez rentrer un mail valide</string>
    <string name="error_info_zipcode">Veuillez rentrer un code postal valide (5 chiffres)</string>
    <string name="error_info_unknownormail">Une erreur est survenue, veuillez vérifier votre connexion internet ou essayer avec un mail différent</string>
</resources>