<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurveyActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/categorie_collapse_mainLayout"
            style="@style/CollapseLayout.MainLayout">

            <HorizontalScrollView
                android:id="@+id/categorie_collapse_child_horizontalScrollView"
                style="@style/CollapseLayout.Child.HorizontalScrollView">

                <LinearLayout
                    android:id="@+id/categorie_insert_layout"
                    style="@style/CollapseLayout.Child.PillContainer">

                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/categorie_collapse_parent"
                style="@style/CollapseLayout.Parent">

                <TextView
                    android:id="@+id/categorie_collapse_title"
                    style="@style/CollapseLayout.Parent.Title" />

                <ImageView
                    android:id="@+id/categorie_collapse_arrow"
                    style="@style/CollapseLayout.Parent.Arrow" />

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            style="@style/CollapseLayout.MainLayout"
            android:id="@+id/sscategorie_collapse_mainLayout">
            <HorizontalScrollView
                android:id="@+id/sscategorie_collapse_child_horizontalScrollView"
                style="@style/CollapseLayout.Child.HorizontalScrollView">

                <LinearLayout
                    android:id="@+id/sscategorie_insert_layout"
                    style="@style/CollapseLayout.Child.PillContainer">

                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/sscategorie_collapse_parent"
                style="@style/CollapseLayout.Parent">

                <TextView
                    android:id="@+id/sscategorie_collapse_title"
                    style="@style/CollapseLayout.Parent.Title" />

                <ImageView
                    android:id="@+id/sscategorie_collapse_arrow"
                    style="@style/CollapseLayout.Parent.Arrow" />

            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/sssscategorie_collapse_mainLayout"
            style="@style/CollapseLayout.MainLayout">

            <HorizontalScrollView
                android:id="@+id/sssscategorie_collapse_child_horizontalScrollView"
                style="@style/CollapseLayout.Child.HorizontalScrollView">

                <LinearLayout
                    android:id="@+id/sssscategorie_insert_layout"
                    style="@style/CollapseLayout.Child.PillContainer">

                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/sssscategorie_collapse_parent"
                style="@style/CollapseLayout.Parent">

                <TextView
                    android:id="@+id/sssscategorie_collapse_title"
                    style="@style/CollapseLayout.Parent.Title" />

                <ImageView
                    android:id="@+id/sssscategorie_collapse_arrow"
                    style="@style/CollapseLayout.Parent.Arrow" />

            </LinearLayout>

        </FrameLayout>

        <!-- Aliments -->
        <FrameLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Aliments.Title"
                    android:text="@string/aliments_title"/>

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@color/light_blue">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp">

                    <TextView
                        android:id="@+id/aliment_message"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/no_aliments_message"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"/>

                    <ProgressBar
                        android:id="@+id/aliment_loader"
                        android:visibility="gone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:indeterminate="true"
                        android:indeterminateTintMode="src_atop"
                        android:indeterminateTint="@color/dark_blue"/>

                    <LinearLayout
                        android:id="@+id/aliment_insert_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>

                </FrameLayout>

            </ScrollView>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/black"
        android:layout_gravity="bottom">

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="20dp">

            <LinearLayout
                android:id="@+id/selected_insert_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/send_counter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:text="@string/send_number_alim" />

        <ImageView
            android:id="@+id/send_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="clip_vertical"
            android:layout_marginEnd="10dp"
            android:src="@drawable/arrow_send"
            android:visibility="gone"/>

    </LinearLayout>

</FrameLayout>